--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,12 @@
 	src: url("./fonts/Roboto_Condensed/static/RobotoCondensed-Medium.ttf");
 }
 
+@layer base {
+	small {
+		@apply text-accent block mb-1 font-inter;
+	}
+}
+
 @utility flex-center {
 	@apply flex justify-center items-center;
 }
@@ -46,6 +52,7 @@
 
 @theme {
 	--color-primary: #4f46e5;
+	--color-secondary: #111827;
 	--color-accent: rgb(121, 120, 120);
 	--color-bg: rgb(238, 240, 241);
 	--color-bg2: rgb(218, 220, 221);
