--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,13 +47,14 @@
 }
 
 .test {
-	color: rgb(121, 120, 120);
+	color: #d4d3d6;
 }
 
 @theme {
-	--color-primary: #4f46e5;
+	--color-primary: #231e88;
 	--color-secondary: #111827;
 	--color-accent: rgb(121, 120, 120);
+	--color-accentLight: #d4d3d6;
 	--color-bg: rgb(238, 240, 241);
 	--color-bg2: rgb(218, 220, 221);
 	--font-inter: "inter";
