--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,11 @@
 	src: url("./fonts/Roboto_Condensed/static/RobotoCondensed-Medium.ttf");
 }
 
+@font-face {
+	font-family: "jsans";
+	src: url("./fonts/PlusJakartaSans-Medium.ttf");
+}
+
 @layer base {
 	small {
 		@apply text-gray-500 block mb-1 font-inter cursor-pointer hover:text-white;
@@ -106,4 +111,5 @@
 	--font-open: "opensans";
 	--font-outfit: "outfit";
 	--font-roboto: "roboto";
+	--font-jsans: "jsans";
 }
